crates/next-custom-transforms/tests/errors/react-server-components/server-graph/use-cache/output.js
export const runtime = 'edge';
// The following route segment configs are currently allowed:
export const dynamic = 'force-dynamic';
export const dynamicParams = false;
export const fetchCache = 'force-no-store';
export const revalidate = 1;
